--- a/src/app/components/projects/projects.component.sass
+++ b/src/app/components/projects/projects.component.sass
@@ -7,16 +7,18 @@
     padding: 10px
 
 .contenedor-list-project
+    width: 90%
+    overflow: hidden
+    margin: auto
     display: flex
+    flex-wrap: wrap
+    justify-content: center
+    align-content: center
     align-items: flex-start
     padding: 60px 25px 0px 0px
 
 .image
      margin: 0px 70px 0px 0px
-
-.image-project
-    max-width: 100%
-    height: auto
 
 .fa-tags
     color:#fff
